clean up files, add notebooks folder

--- a/notebooks/cindy_eda.ipynb
+++ b/notebooks/cindy_eda.ipynb
@@ -136,9 +136,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/churn_train.csv')\n",
+    "df = pd.read_csv('../data/churn_train.csv')\n",
     "\n",
-    "train = pd.read_csv('data/churn_train.csv')"
+    "train = pd.read_csv('../data/churn_train.csv')"
    ]
   },
   {
@@ -622,7 +622,7 @@
     "ax = sns.countplot(df['churn'])\n",
     "ax.set_title('Count of Churn')\n",
     "\n",
-    "plt.savefig('images/count_churn.png')"
+    "plt.savefig('../images/count_churn.png')"
    ]
   },
   {
@@ -956,7 +956,7 @@
     "ax = sns.heatmap(train.corr(), annot=True, cmap='coolwarm');\n",
     "ax.set_title('Correlation Map')\n",
     "\n",
-    "plt.savefig('images/corr_map')"
+    "plt.savefig('../images/corr_map')"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
     "ax = sns.barplot(x='churn', y='trips_in_first_30_days', data=train);\n",
     "ax.set_title('User Churn vs number of trips within the first 30 days')\n",
     "\n",
-    "plt.savefig('images/trips_churn.png')"
+    "plt.savefig('../images/trips_churn.png')"
    ]
   },
   {
