--- a/notebooks/cindy_log_regres.ipynb
+++ b/notebooks/cindy_log_regres.ipynb
@@ -136,9 +136,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/churn_train.csv')\n",
+    "df = pd.read_csv('../data/churn_train.csv')\n",
     "\n",
-    "train = pd.read_csv('data/churn_train.csv')"
+    "train = pd.read_csv('../data/churn_train.csv')"
    ]
   },
   {
@@ -1267,7 +1267,7 @@
     "    ax.plot([0,1], [0,1], 'k--')\n",
     "    ax.set_title('Logistic Regression with 3 folds')\n",
     "    \n",
-    "# plt.savefig('images/kfolds_3.png')"
+    "# plt.savefig('../images/kfolds_3.png')"
    ]
   },
   {
@@ -1350,7 +1350,7 @@
    "source": [
     "coef_plot(model[0], df, 5)\n",
     "\n",
-    "plt.savefig('images/coefs_5.png')"
+    "plt.savefig('../images/coefs_5.png')"
    ]
   },
   {
@@ -1379,7 +1379,7 @@
     "    ax.plot([0,1], [0,1], 'k--')\n",
     "    ax.set_title('Logistic Regression with 5 folds', color='black')\n",
     "    \n",
-    "# plt.savefig('images/kfolds_5.png')"
+    "# plt.savefig('../images/kfolds_5.png')"
    ]
   },
   {
@@ -1455,7 +1455,7 @@
    "source": [
     "coef_plot(model[0], df, 10)\n",
     "\n",
-    "plt.savefig('images/coefs_10.png')"
+    "plt.savefig('../images/coefs_10.png')"
    ]
   },
   {
@@ -1484,7 +1484,7 @@
     "    ax.plot([0,1], [0,1], 'k--')\n",
     "    ax.set_title('Logistic Regression with 10 folds', color='black')\n",
     "    \n",
-    "# plt.savefig('images/kfolds_10.png')"
+    "# plt.savefig('../images/kfolds_10.png')"
    ]
   },
   {
