--- a/notebooks/final_test_ride_share.ipynb
+++ b/notebooks/final_test_ride_share.ipynb
@@ -37,8 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('data/churn_train.csv')\n",
-    "df_test = pd.read_csv('data/churn_train.csv')\n",
+    "df_train = pd.read_csv('../data/churn_train.csv')\n",
+    "df_test = pd.read_csv('../data/churn_train.csv')\n",
     "df_train = clean_data(df_train)\n",
     "df_test = clean_data(df_test)\n",
     "to_one_hot_encode = ['city', 'phone']\n",
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
