--- a/notebooks/supervised_case_study_eda.ipynb
+++ b/notebooks/supervised_case_study_eda.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/churn_train.csv')"
+    "df = pd.read_csv('../data/churn_train.csv')"
    ]
   },
   {
